---
source: crates/engine/query-solver/src/tests/sibling_dependencies.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.me\" ]\n    3 [ label = \"User.id\" ]\n    4 [ label = \"User.username\" ]\n    5 [ label = \"User.cart\" ]\n    6 [ label = \"Cart.products\" ]\n    7 [ label = \"FedEntity#products\", color=royalblue,shape=parallelogram ]\n    8 [ label = \"Product.price\" ]\n    9 [ label = \"*Product.upc\" ]\n    10 [ label = \"FedEntity#reviews\", color=royalblue,shape=parallelogram ]\n    11 [ label = \"Product.reviews\" ]\n    12 [ label = \"Review.author\" ]\n    13 [ label = \"User.id\" ]\n    14 [ label = \"FedEntity#accounts\", color=royalblue,shape=parallelogram ]\n    15 [ label = \"User.username\" ]\n    16 [ label = \"Review.body\" ]\n    17 [ label = \"*Product.name\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    2 -> 5 [ label = \"\" ]\n    5 -> 6 [ label = \"\" ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [ label = \"\" ]\n    7 -> 9 [ label = \"\" ]\n    6 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 11 [ label = \"\" ]\n    11 -> 12 [ label = \"\" ]\n    12 -> 13 [ label = \"\" ]\n    12 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 15 [ label = \"\" ]\n    11 -> 16 [ label = \"\" ]\n    6 -> 17 [ label = \"\" ]\n    7 -> 17 [ label = \"\", color=orangered,arrowhead=inv ]\n    10 -> 9 [ label = \"\", color=orangered,arrowhead=inv ]\n    14 -> 13 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#accounts" ]
    2 [ label = "Query.me" ]
    3 [ label = "User.id" ]
    4 [ label = "User.username" ]
    5 [ label = "User.cart" ]
    6 [ label = "Cart.products" ]
    7 [ label = "FedEntity#products" ]
    8 [ label = "Product.price" ]
    9 [ label = "*Product.upc" ]
    10 [ label = "FedEntity#reviews" ]
    11 [ label = "Product.reviews" ]
    12 [ label = "Review.author" ]
    13 [ label = "User.id" ]
    14 [ label = "FedEntity#accounts" ]
    15 [ label = "User.username" ]
    16 [ label = "Review.body" ]
    17 [ label = "*Product.name" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    2 -> 5 [ label = "Field" ]
    5 -> 6 [ label = "Field" ]
    6 -> 7 [ label = "QueryPartition" ]
    7 -> 8 [ label = "Field" ]
    7 -> 9 [ label = "Field" ]
    6 -> 10 [ label = "QueryPartition" ]
    10 -> 11 [ label = "Field" ]
    11 -> 12 [ label = "Field" ]
    12 -> 13 [ label = "Field" ]
    12 -> 14 [ label = "QueryPartition" ]
    14 -> 15 [ label = "Field" ]
    11 -> 16 [ label = "Field" ]
    6 -> 17 [ label = "Field" ]
    7 -> 17 [ label = "RequiredBySubgraph" ]
    10 -> 9 [ label = "RequiredBySubgraph" ]
    14 -> 13 [ label = "RequiredBySubgraph" ]
}
